fix: removed overflow: hidden

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
 body {
   font-family: "Roboto", sans-serif;
   font-size: 1.4rem;
-  overflow: hidden;
 }
 
 img {
